# fukawa

./: .dockerignore  .env.examle  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.dev.yaml  compose.test.yaml  compose.yaml  compose.yml  p.py  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 03f5f2c7b4da_init_schema.py  44e85e0f2ce8_drop_default_constraint_for_public_id.py  6de5d1104d20_add_org_check_constraint.py  71ab73abc607_back_try.py  b3d8b7e6e2e1_add_organization_name_canonical.py  b629fc290054_add_org_check_constraint.py  cf9d2b1a7e10_make_org_name_canonical_generated.py  e198acc33aa8_alter_tables_updated_at_can_be_nullable.py  f2934a69b2d3_tests.py
keycloak/: ukawa-pet-realm.json
src/pet/: config.py  main.py
src/pet/api/: exceptions_handler.py  health.py  http_logging.py  organizations.py
src/pet/api/auth/: __init__.py  dependencies.py  exception_handlers.py
src/pet/api/middleware/: http_logging.py
src/pet/app/: error_mappers.py  errors.py  exc.py  organizations.py  transaction_executor.py
src/pet/app/auth/: __init__.py  exc.py  verifier.py
src/pet/app/usecases/: organizations.py
src/pet/config/: exc.py  logging.py  settings.py
src/pet/di/: auth.py  db.py  uow.py
src/pet/domain/: exc.py  models.py  repos.py  uow.py  value_objects.py
src/pet/domain/auth/: __init__.py  principal.py
src/pet/infra/: transaction_executor.py  uow.py
src/pet/infra/auth/: __init__.py  jwks.py  keycloak_verifier.py
src/pet/infra/db/: connection.py  models.py  repos.py
src/pet/infra/sqla/: uow.py
src/pet/infra/sqla/db/: connection.py  exc.py  models.py  repos.py
src/pet/infra/sqlalchemy/: uow.py
src/pet/infra/sqlalchemy/db/: base.py  exc.py  models.py  repos.py
tests/: conftest.py
tests/integration/: conftest.py  test_api.py
tests/integration/api/: test_create_organizations.py  test_health.py
tests/unit/: test.py  test2.py  test3.py  test_app_create_organizations.py  test_infra_sqla_exc.py  test_infra_sqla_uow.py  test_main.py
tests/unit/api/: test_error_handling.py  test_http_logging.py  test_organizations.py
tests/unit/app/: test_create_organization.py
tests/unit/auth/: _keys.py  test_dependencies.py  test_jwks_provider.py  test_keycloak_verifier.py
tests/unit/config/: test_keycloak_settings.py  test_settings.py
tests/unit/domain/: test_models.py  test_value_objects.py
tests/unit/infra/sqla/: test_exc.py  test_transaction_executor.py  test_uow.py
