[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pet"
version = "0.1.0"
description = "Backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "uvicorn>=0.41.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
migration = ["alembic>=1.18.4", "python-dotenv>=1.2.1"]

test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
    "testcontainers>=4.14.1",
]

lint = ["ruff>=0.15.2", "pyright>=1.1.408"]

dev = [
    { include-group = "migration" },
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=pet",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-branch",
]
markers = ["unit: isolated fast tests", "integration: tests with real infra"]

[tool.coverage.run]
branch = true
source_pkgs = ["pet"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
